Ajout de la gestion des dispatchers par l'admin (création, modification, suppression)